ionic-chat-sdk_versioned_docs/version-2.0/04-Messaging/01-Send a Message.md
---
sidebar_position: 1
title: Send a Message
slug: /messaging-send-message
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Using CometChat, you can send three types of messages:

1. A [text message](./messaging-send-message#text-message), the most common and standard message type.
2. A [media message](./messaging-send-message#media-message), for sending photos, videos and files.
3. A [custom message](./messaging-send-message#custom-message), for sending completely custom data using JSON structures.

You can also send metadata along with a text, media or custom message. Think, for example, if you'd want to share the user's location with every message, you can use the metadata field

## Text Message

_In other words, as a sender, how do I send a text message?_

To send a text message to a single user or group, you need to use the `sendMessage()` method and pass a `TextMessage` object to it.

<Tabs>
<TabItem value="User" label="User">

```javascript
let receiverID = "UID";
let messageText = "Hello world!";
let receiverType = CometChat.RECEIVER_TYPE.USER;
let textMessage = new CometChat.TextMessage(
  receiverID,
  messageText,
  receiverType
);

CometChat.sendMessage(textMessage).then(
  (message) => {
    console.log("Message sent successfully:", message);
  },
  (error) => {
    console.log("Message sending failed with error:", error);
  }
);
```

</TabItem>
<TabItem value="Group" label="Group">

```javascript
let receiverID = "GUID";
let messageText = "Hello world!";
let receiverType = CometChat.RECEIVER_TYPE.GROUP;
let textMessage = new CometChat.TextMessage(
  receiverID,
  messageText,
  receiverType
);

CometChat.sendMessage(textMessage).then(
  (message) => {
    console.log("Message sent successfully:", message);
  },
  (error) => {
    console.log("Message sending failed with error:", error);
  }
);
```

</TabItem>
</Tabs>

The `TextMessage` class constructor takes the following parameters:

| Parameter        | Description                                                                                                   |          |
| ---------------- | ------------------------------------------------------------------------------------------------------------- | -------- |
| **receiverID**   | `UID` of the user or `GUID` of the group receiving the message                                                | Required |
| **messageText**  | The text message                                                                                              | Required |
| **receiverType** | The type of the receiver- `CometChatConstants.RECEIVER_TYPE_USER` or `CometChatConstants.RECEIVER_TYPE_GROUP` | Required |

When a text message is sent successfully, the response will include a `TextMessage` object which includes all information related to the sent message.

### Add Metadata

To send custom data along with a text message, you can use the `setMetadata` method and pass a `JSONObject` to it.

<Tabs>
<TabItem value="User" label="User">

```javascript
let receiverID = "UID";
let messageText = "Hello World!";
let receiverType = CometChat.RECEIVER_TYPE.USER;
let textMessage = new CometChat.TextMessage(
  receiverID,
  messageText,
  receiverType
);

let metadata = {
  latitude: "50.6192171633316",
  longitude: "-72.68182268750002",
};

textMessage.setMetadata(metadata);

CometChat.sendMessage(textMessage).then(
  (message) => {
    console.log("Message sent successfully:", message);
  },
  (error) => {
    console.log("Message sending failed with error:", error);
  }
);
```

</TabItem>
<TabItem value="Group" label="Group">

```javascript
let receiverID = "GUID";
let messageText = "Hello World!";
let receiverType = CometChat.RECEIVER_TYPE.GROUP;
let textMessage = new CometChat.TextMessage(
  receiverID,
  messageText,
  receiverType
);

var metadata = {
  latitude: "50.6192171633316",
  longitude: "-72.68182268750002",
};

textMessage.setMetadata(metadata);

CometChat.sendMessage(textMessage).then(
  (message) => {
    console.log("Message sent successfully:", message);
  },
  (error) => {
    console.log("Message sending failed with error:", error);
  }
);
```

</TabItem>
</Tabs>

## Media Message

_In other words, as a sender, how do I send a media message like photos, videos & files?_

To send a media message to any user or group, you need to use the `sendMediaMessage()` method and pass a `MediaMessage` object to it.

Getting file Object:
You can use different ionic packages for sending media messages. We demonstrate how to send images using CometChat.
<Tabs>
<TabItem value="Javascript" label="Javascript">

```javascript
ImagePicker.showImagePicker(options, (response) => {
if (response.didCancel) {
  console.log('User cancelled photo picker');
} else if (response.error) {
  console.log('ImagePicker Error: ', response.error);
} else if (response.customButton) {
  console.log('User tapped custom button: ', response.customButton);
} else {
  console.log('ImagePicker Response: ', response);
  if (Platform.OS === 'ios' && response.fileName != undefined) {
    var ext = response.fileName.split('.')[1].toLowerCase();
    var type = this.getMimeType(ext);
    var name = response.fileName;
  } else {
    var type = response.type;
    var name = 'Camera_001.jpeg';
  }
  var file = {
    name: Platform.OS === "android" ? response.fileName : name,
    type: Platform.OS === "android" ? response.type : type,
    uri: Platform.OS === "android" ? response.uri : response.uri.replace("file://", ""),
  }
  console.log('file: ', file);
  this.setState({ mediaMsg: file })
}
});
}
```

</TabItem>
</Tabs>

<Tabs>
<TabItem value="User" label="User">

```javascript
let receiverID = "UID";
let messageType = CometChat.MESSAGE_TYPE.FILE;
let receiverType = CometChat.RECEIVER_TYPE.USER;
let mediaMessage = new CometChat.MediaMessage(
  receiverID,
  this.state.mediaMsg,
  messageType,
  receiverType
);

CometChat.sendMediaMessage(mediaMessage).then(
  (message) => {
    console.log("Media message sent successfully", message);
  },
  (error) => {
    console.log("Media message sending failed with error", error);
  }
);
```

</TabItem>
<TabItem value="Group" label="Group">

```javascript
let receiverID = "GUID";
let messageType = CometChat.MESSAGE_TYPE.FILE;
let receiverType = CometChat.RECEIVER_TYPE.GROUP;
let mediaMessage = new CometChat.MediaMessage(
  receiverID,
  this.state.mediaMsg,
  messageType,
  receiverType
);

CometChat.sendMediaMessage(mediaMessage).then(
  (message) => {
    console.log("Media message sent successfully", message);
  },
  (error) => {
    console.log("Media message sending failed with error", error);
  }
);
```

</TabItem>
</Tabs>

The `MediaMessage` class constructor takes the following parameters:

| Parameter        | Description                                                                                                                                                                                                 |          |
| ---------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------- |
| **receiverId**   | The `UID` or `GUID` of the recipient.                                                                                                                                                                       | Required |
| **file**         | The file object to be sent                                                                                                                                                                                  | Required |
| **messageType**  | The type of the message that needs to be sent which in this case can be: 1.`CometChat.MESSAGE_TYPE.IMAGE` 2.`CometChat.MESSAGE_TYPE.VIDEO` 3.`CometChat.MESSAGE_TYPE.AUDIO` 4.`CometChat.MESSAGE_TYPE.FILE` | Required |
| **receiverType** | The type of the receiver to whom the message is to be sent. `1. CometChat.RECEIVER_TYPE.USER 2. CometChat.RECEIVER_TYPE.GROUP`                                                                              | Required |

When a media message is sent successfully, the response will include a `MediaMessage` object which includes all information related to the sent message.
If you wish to send a caption or some text along with the Media Message, you can use the `caption field` provided by the MediaMessage class. While sending the Media Message use the `setCaption()` method and at the receiver end in the MediaMessage object you can use the `getCaption()` method to obtain the caption shared.

### Add Metadata

To send custom data along with a media message, you can use the `setMetadata` method and pass a `JSONObject` to it.

<Tabs>
<TabItem value="Metadata" label="Metadata">

```javascript
var metadata = {
  latitude: "50.6192171633316",
  longitude: "-72.68182268750002",
};

mediaMessage.setMetadata(metadata);
```

</TabItem>
</Tabs>

### Add Caption(Text along with Media Message)

To send a caption with a media message, you can use `setCaption` method and pass text to it.

<Tabs>
<TabItem value="Caption" label="Caption">

```javascript
var caption = "Random Caption";

mediaMessage.setCaption(caption);
```

</TabItem>
</Tabs>

## Custom Message

_In other words, as a sender, how do I send a custom message like location co-ordinates?_

CometChat allows you to send custom messages which are neither text nor media messages.

In order to send a custom message, you need to use the `sendCustomMessage()` method.

The `sendCustomMessage()` methods takes an object of the `CustomMessage` which can be obtained using the below constructor.

<Tabs>
<TabItem value="Custom Message" label="Custom Message">

```javascript
var customMessage = new CometChat.CustomMessage(
  receiverID,
  receiverType,
  customType,
  customData
);
```

</TabItem>
</Tabs>

The above constructor, helps you create a custom message with the message type set to whatever is passed to the constructor and the category set to `custom`.

The parameters involved are:

1. `receiverId` - Unique id of the user or group to which the message is to be sent.
2. `receiverType` - Type of the receiver i.e user or group
3. `customType` - custom message type that you need to set
4. `customData` - The data to be passed as the message in the form of a JSONObject.

You can also use the subType field of the `CustomMessage` class to set a specific type for the custom message. This can be achieved using the `setSubtype()` method.

Once the object of `CustomMessage` class is ready you can send the custom message using the `sendCustomMessage()` method.

<Tabs>
<TabItem value="Javascript(User)" label="Javascript(User)">

```javascript
let receiverID = "UID";
let customData = {
  latitude: "50.6192171633316",
  longitude: "-72.68182268750002",
};
let customType = "location";
let receiverType = CometChat.RECEIVER_TYPE.USER;
let customMessage = new CometChat.CustomMessage(
  receiverID,
  receiverType,
  customType,
  customData
);

CometChat.sendCustomMessage(customMessage).then(
  (message) => {
    console.log("custom message sent successfully", message);
  },
  (error) => {
    console.log("custom message sending failed with error", error);
  }
);
```

</TabItem>
<TabItem value="Javascript(Group)" label="Javascript(Group)">

```javascript
let receiverID = "GUID";
let customData = {
  latitude: "50.6192171633316",
  longitude: "-72.68182268750002",
};
let customType = "location";
let receiverType = CometChat.RECEIVER_TYPE.GROUP;
let customMessage = new CometChat.CustomMessage(
  receiverID,
  receiverType,
  customType,
  customData
);

CometChat.sendCustomMessage(customMessage).then(
  (message) => {
    console.log("custom message sent successfully", message);
  },
  (error) => {
    console.log("custom message sending failed with error", error);
  }
);
```

</TabItem>
</Tabs>

The above sample explains how custom messages can be used to share the location with a user. The same can be achieved for groups.

On success, you will receive an object of the `CustomMessage` class.
